src/css/game.css
/*Window will be 900px wide by 300px in height*/



.info-panel {
  min-height: 140px;
  box-shadow: 3px 3px 3px grey;
  border: 1px solid black;
  border-radius:15px;
}

.avatar-box {
  border: 1px solid black;

  min-width: 75px;
  min-height: 75px;

  max-width: 75px;
  max-height: 75px;

  margin: 5px;
  margin-left: 0px;

}

.thumbnail {
  min-width: 70px;
  max-width: 70px;

  min-height: 70px;
  max-height: 70px;

  margin: 2px;
}

.energy-table {
  border: 1px solid black;
  margin-left: 15px;

  min-height: 100px;
  max-height: 110px;

  padding-top: 0%;
  padding-bottom: 3%;


}

.energy-table-btn {
  max-height: 20px;
  font-size: 11px;
  padding-top: .5%;
}

.energy-table-row {
  min-height: 20px;
  max-height: 20px;
  border: solid 1px black;
  width: 60%;
  margin-left: 20%;

  padding-top: 2px;
}

.energy-table-btn-container {
  min-height: 20px;
  width: 60%;
  margin-left: 20%;
  margin-top: 5px;
}

.avatar-margin-left {
  margin-left: 15px;
}

.avatar-handle {
  margin-left: 8px;
  margin-top: 5px;
}

.timer {
  padding-left: 50px;
  padding-top: 2px;
}
.progress-bar {
  min-height: 20px;
  min-width: 200px;
  border: solid 1px black;
  background-color: green;
}

.energy {
  min-width: 15px;
  min-height: 15px;

  max-width: 15px;
  max-height: 15px;

  border: solid 1px black;
}

.green {
  background-color: #00ff00;
}

.red {
  background-color: red;
}

.blue {
  background-color: blue;
}

.black {
  background-color: black;
}

